fix padding issues on ie and introuce l-fluid-breakout__main-item class

--- a/scss/_layouts_fluid-breakout.scss
+++ b/scss/_layouts_fluid-breakout.scss
@@ -7,43 +7,49 @@
   $suffix: ''
 ) {
   %l-fluid-breakout-ie11-fallback#{$suffix} {
-    display: flex;
+    @media (min-width: $breakpoint-large) {
+      display: flex;
+    }
+  }
 
-    @media (max-width: $threshold-4-6-col) {
-      flex-direction: column;
+  %l-fluid-breakout__full-and-main-item-ie11-fallback#{$suffix} {
+    margin-right: $grid-gap;
+
+    @media (min-width: $l-fluid-breakout-3-col-threshold) {
+      flex: 1 1 auto;
+      width: $l-fluid-breakout-main-child-width;
     }
   }
 
   %l-fluid-breakout__full-and-main-ie11-fallback#{$suffix} {
     display: flex;
     flex-wrap: wrap;
-
-    & > * {
-      margin-left: 0.5 * $grid-gap;
-      margin-right: 0.5 * $grid-gap;
-    }
+    width: 100%;
 
     @media (min-width: $l-fluid-breakout-3-col-threshold) {
       width: calc(100% - #{$l-fluid-breakout-aside-width});
-      // stylelint-disable-next-line max-nesting-depth
-      & > * {
-        flex: 1 1 auto;
-        width: $l-fluid-breakout-main-child-width;
-      }
     }
   }
 
-  %l-fluid-breakout__aside-ie-11-fallback#{$suffix} {
+  %l-fluid-breakout__aside-common-properties-ie-11-fallback#{$suffix} {
     flex: 0 0 auto;
     justify-content: flex-start;
 
-    @media (min-width: $l-fluid-breakout-3-col-threshold) {
+    @media (min-width: $breakpoint-large) {
       flex: 1 1 auto;
       width: $l-fluid-breakout-aside-width;
     }
+  }
 
-    @media (min-width: $threshold-4-6-col) and (max-width: $l-fluid-breakout-3-col-threshold) {
-      padding-right: map-get($grid-margin-widths, large);
+  %l-fluid-breakout__aside--left-ie-11-fallback#{$suffix} {
+    @extend %l-fluid-breakout__aside-common-properties-ie-11-fallback#{$suffix};
+  }
+
+  %l-fluid-breakout__aside--right-ie-11-fallback#{$suffix} {
+    @extend %l-fluid-breakout__aside-common-properties-ie-11-fallback#{$suffix};
+
+    @media (max-width: $l-fluid-breakout-3-col-threshold) {
+      padding-left: 0;
     }
   }
 
@@ -51,6 +57,7 @@
     @extend %l-fluid-breakout-ie11-fallback#{$suffix};
 
     @supports (display: grid) {
+      display: block;
       grid-gap: 0 0;
     }
 
@@ -93,34 +100,49 @@
       }
     }
 
-    %l-fluid-breakout__main-and-full-common {
-      @extend %l-fluid-breakout__full-and-main-ie11-fallback#{$suffix};
+    %l-fluid-breakout__full-and-main-item-common#{$suffix} {
+      @extend %l-fluid-breakout__full-and-main-item-ie11-fallback#{$suffix};
 
-      width: 100%;
+      @supports (display: grid) {
+        // overwrite fallback margins
+        margin-right: 0;
+      }
+    }
+
+    .l-fluid-breakout__full-item {
+      @extend %l-fluid-breakout__full-and-main-item-common#{$suffix};
+    }
+
+    .l-fluid-breakout__main-item {
+      @extend %l-fluid-breakout__full-and-main-item-common#{$suffix};
+
+      @media (min-width: $l-fluid-breakout-3-col-threshold) {
+        @supports (display: grid) {
+          grid-column: auto / auto;
+          width: initial;
+        }
+      }
+    }
+
+    %l-fluid-breakout__main-and-full-common#{$suffix} {
+      @extend %l-fluid-breakout__full-and-main-ie11-fallback#{$suffix};
 
       @supports (display: grid) {
         display: grid;
         grid-gap: 0 $grid-gap;
         grid-row: 1;
         grid-template-columns: repeat(auto-fit, minmax($l-fluid-breakout-main-child-width, 1fr));
+        width: 100%;
       }
 
       @media (min-width: $l-fluid-breakout-3-col-threshold) {
         padding-left: map-get($grid-margin-widths, large);
         padding-right: map-get($grid-margin-widths, large);
       }
-
-      & > * {
-        @supports (display: grid) {
-          // overwrite fallback margins
-          margin-left: 0;
-          margin-right: 0;
-        }
-      }
     }
 
     .l-fluid-breakout__full {
-      @extend %l-fluid-breakout__main-and-full-common;
+      @extend %l-fluid-breakout__main-and-full-common#{$suffix};
 
       @media (min-width: $breakpoint-large) {
         // stylelint-disable-next-line max-nesting-depth
@@ -131,7 +153,7 @@
     }
 
     .l-fluid-breakout__main {
-      @extend %l-fluid-breakout__main-and-full-common;
+      @extend %l-fluid-breakout__main-and-full-common#{$suffix};
 
       @media (min-width: $breakpoint-large) {
         @supports (display: grid) {
@@ -143,21 +165,11 @@
           }
         }
       }
-
-      & > * {
-        // stylelint-disable-next-line max-nesting-depth
-        @media (min-width: $l-fluid-breakout-3-col-threshold) {
-          // stylelint-disable-next-line max-nesting-depth
-          @supports (display: grid) {
-            grid-column: auto / auto;
-            width: initial;
-          }
-        }
-      }
     }
 
-    %l-fluid-breakout__aside-common-properties {
-      @extend %l-fluid-breakout__aside-ie-11-fallback#{$suffix};
+    %l-fluid-breakout__aside-common-properties#{$suffix} {
+      //negate properties needed for the ie11 fallback
+      padding-left: 0;
 
       @media (min-width: $l-fluid-breakout-3-col-threshold) {
         align-items: start;
@@ -171,7 +183,8 @@
     }
 
     .l-fluid-breakout__aside {
-      @extend %l-fluid-breakout__aside-common-properties;
+      @extend %l-fluid-breakout__aside--right-ie-11-fallback#{$suffix};
+      @extend %l-fluid-breakout__aside-common-properties#{$suffix};
 
       @media (min-width: $breakpoint-large) and (max-width: $l-fluid-breakout-3-col-threshold) {
         padding-right: map-get($grid-margin-widths, large);
@@ -184,13 +197,12 @@
     }
 
     .l-fluid-breakout__aside--right {
-      @media (max-width: $breakpoint-medium) {
-        padding-left: map-get($grid-margin-widths, large);
-        padding-right: 0;
-      }
+      @extend %l-fluid-breakout__aside--left-ie-11-fallback#{$suffix};
+      @extend %l-fluid-breakout__aside-common-properties#{$suffix};
 
       @media (min-width: $breakpoint-large) and (max-width: $l-fluid-breakout-3-col-threshold) {
         padding-left: map-get($grid-margin-widths, large);
+        padding-right: 0;
       }
 
       @media (min-width: $l-fluid-breakout-3-col-threshold) {
@@ -198,7 +210,7 @@
         padding-right: map-get($grid-margin-widths, large);
       }
 
-      @extend %l-fluid-breakout__aside-common-properties;
+      @extend %l-fluid-breakout__aside-common-properties#{$suffix};
     }
   }
 }
